SDKs/1password.local/connect/1.3.0/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.GetAPIActivityRequest{
        Security: operations.GetAPIActivitySecurity{
            ConnectToken: shared.SchemeConnectToken{
                Authorization: "Bearer YOUR_BEARER_TOKEN_HERE",
            },
        },
        QueryParams: operations.GetAPIActivityQueryParams{
            Limit: 8717895732742165505,
            Offset: 2259404117704393152,
        },
    }
    
    res, err := s.Activity.GetAPIActivity(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.APIRequests != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Activity

* `GetAPIActivity` - Retrieve a list of API Requests that have been made.

### Files

* `DownloadFileByID` - Get the content of a File
* `GetDetailsOfFileByID` - Get the details of a File
* `GetItemFiles` - Get all the files inside an Item

### Health

* `GetHeartbeat` - Ping the server for liveness
* `GetServerHealth` - Get state of the server and its dependencies.

### Items

* `CreateVaultItem` - Create a new Item
* `DeleteVaultItem` - Delete an Item
* `GetVaultItemByID` - Get the details of an Item
* `GetVaultItems` - Get all items for inside a Vault
* `PatchVaultItem` - Update a subset of Item attributes
* `UpdateVaultItem` - Update an Item

### Metrics

* `GetPrometheusMetrics` - Query server for exposed Prometheus metrics

### Vaults

* `GetVaultByID` - Get Vault details and metadata
* `GetVaults` - Get all Vaults

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
